Added in more buttons for different color blocks

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     </div>
     <div id="main">
         <div id="controls">
-            <button id="clear">Clear</button>
+            <button id="clearBtn">Reset</button>
             <button id="changeGrid">Change Grid</button>
+            <p>Options</p>
+            <button id="blackWhite" class="colorOption">black/white</button>
+            <button id="randomColor" class="colorOption">Random Color</button>
+            <button id="grayScale" class="colorOption">Gray Scale</button>
         </div>
         <div id="etchBox"></div>
     </div>
